--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,14 @@
     font-family: 'Lato-LightItalic';
     src: url('fonts/Lato/Lato-LightItalic.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'Poppins-Regular';
+    src: url('fonts/Poppins/Poppins-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Poppins-LightItalic';
+    src: url('fonts/Poppins/Poppins-LightItalic.ttf') format('truetype');
+}
 
 body {
     /*font-family: 'Helvetica';*/
@@ -109,7 +117,7 @@ main {
     /*max-width: 900px;*/
     width: 100%;
     /*margin: 40px auto;*/
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     margin-bottom: 20px;
 }
 
@@ -151,7 +159,7 @@ section {
 .about_me h1 {
     font-size: 4em;
     text-align: center;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     color: white;
     /*padding: 0;*/
     margin-top: 20px;
@@ -161,7 +169,7 @@ section {
 .about_me h2 {
     font-size: 2.5em;
     text-align: center;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
     /*padding: 0;*/
     /*margin-top: 5px;*/
@@ -171,7 +179,7 @@ section {
 
 .about_me p {
     font-size: 0.9em;
-    font-family: 'Helvetica';
+    font-family: 'Poppins-Regular';
     color: white;
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
     /*line-height: 1.4;*/
@@ -216,7 +224,7 @@ section {
 .blog h1 {
     font-size: 4em;
     text-align: center;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     color: rgb(54, 69, 79);
     margin-top: 10px;
     margin-bottom: 30px;
@@ -285,7 +293,7 @@ section {
 .linkedin h1 {
     font-size: 4em;
     text-align: center;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     color: rgb(54, 69, 79);
     margin-top: 10px;
     margin-bottom: 30px;
@@ -322,7 +330,7 @@ section {
 .projects h1 {
     font-size: 4em;
     text-align: center;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     color: rgb(54, 69, 79);
     margin-top: 10px;
     margin-bottom: 30px;
