--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ header {
     align-items: center;
     /*padding: 50px 20px;*/
     /*border-radius: 8px;*/
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
 }
 
@@ -98,14 +98,14 @@ header img {
 .header_text h1 {
     text-align: center;
     font-size: 4em;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     /*font-weight: 500;*/
     /*margin-top: 10px;*/
 }
 
 .header_text p {
     text-align: center;
-    font-family: 'Lato-LightItalic';
+    font-family: 'Poppins-LightItalic';
     /*font-weight: 400;*/
     /*font-style: italic;*/
     font-size: 1.5em;
@@ -179,7 +179,7 @@ section {
 
 .about_me p {
     font-size: 0.9em;
-    font-family: 'Poppins-Regular';
+    font-family: 'Helvetica';
     color: white;
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
     /*line-height: 1.4;*/
