--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@ section {
 
 .para_spacing_2 {
     /*margin-bottom: 20px;*/
+    text-align: center;
     padding: 0 40px 20px 40px;
 }
 
@@ -226,7 +227,7 @@ section {
     text-align: center;
     font-family: 'Poppins-Regular';
     color: rgb(54, 69, 79);
-    margin-top: 8px;
+    margin-top: 5px;
     margin-bottom: 30px;
     /*line-height: 1.5;*/
 }
@@ -270,7 +271,7 @@ section {
     color: white;
     text-decoration: none;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 20px 20px;
     background-color: rgb(0, 86, 255);
     /*background-color: white;*/
     border-radius: 20px;
@@ -295,7 +296,7 @@ section {
     text-align: center;
     font-family: 'Poppins-Regular';
     color: rgb(54, 69, 79);
-    margin-top: 8px;
+    margin-top: 5px;
     margin-bottom: 30px;
 }
 
@@ -332,7 +333,7 @@ section {
     text-align: center;
     font-family: 'Poppins-Regular';
     color: rgb(54, 69, 79);
-    margin-top: 8px;
+    margin-top: 5px;
     margin-bottom: 30px;
 }
 
