--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,8 @@ section {
 
 .blog {
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
-    background: rgb(235, 235, 235);
+    /*background: rgb(235, 235, 235);*/
+    background: #d9f1ff;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -286,7 +287,8 @@ section {
 
 .linkedin {
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
-    background: rgb(235, 235, 235);
+    /*background: rgb(235, 235, 235);*/
+    background: #d9f1ff;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -323,7 +325,8 @@ section {
 
 .projects {
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
-    background: rgb(235, 235, 235);
+    /*background: rgb(235, 235, 235);*/
+    background: #d9f1ff;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
