--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,17 @@ section {
     /*margin: 0 40px;*/
 }
 
+.about_me img {
+    display: flex;
+    /*display: block;
+    margin: auto;
+    width: 50%;
+    height: auto;*/
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
 .text_highlight {
     color: rgb(200, 200, 200);
     /*font-weight: bold;*/
@@ -206,16 +217,6 @@ section {
     /*margin-bottom: 20px;*/
     text-align: center;
     padding: 0 40px 20px 40px;
-}
-
-.about_me img {
-    display: flex;
-    /*display: block;
-    margin: auto;
-    width: 50%;
-    height: auto;*/
-    justify-content: center;
-    align-items: center;
 }
 
 .blog {
