--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,11 @@ main {
     gap: 20px;
 }
 
+.display2 {
+    display: flex;
+    gap: 20px;
+}
+
 section {
     flex: 1;
 }
@@ -282,6 +287,22 @@ section {
 }
 
 .learn_more:hover {
+    color: white;
+    text-decoration: none;
+    background-color: rgb(0, 43, 200);
+}
+
+.menu_learn_more {
+    color: rgb(0, 43, 200);
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: white;
+    border-radius: 20px;
+    border: 2px solid rgb(0, 43, 200);
+}
+
+.menu_learn_more:hover {
     color: white;
     text-decoration: none;
     background-color: rgb(0, 43, 200);
