--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,17 @@ body {
     padding: 0 20px; /*comment this to remove white side box borders*/
 }
 
+.display2 {
+    display: flex;
+    gap: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.section {
+    flex: 1;
+}
+
 /* Header Styles */
 header {
     width: 100%;
@@ -122,11 +133,6 @@ main {
 }
 
 .display1 {
-    display: flex;
-    gap: 20px;
-}
-
-.display2 {
     display: flex;
     gap: 20px;
 }
