--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,8 @@ body {
 
 .display2 {
     display: flex;
-    gap: 20px;
+    gap: 5px;
+    align-items: right;
     margin-top: 10px;
     margin-bottom: 10px;
 }
