--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
 .display2 {
     display: flex;
     gap: 5px;
-    align-items: right;
+    justify-content: flex-end;
     margin-top: 10px;
     margin-bottom: 10px;
 }
