--- a/styles.css
+++ b/styles.css
@@ -92,8 +92,9 @@ header {
     align-items: center;
     /*padding: 50px 20px;*/
     /*border-radius: 8px;*/
-    margin-bottom: 20px;
-    box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);
+    margin-bottom: 10px;
+    /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /*.header_items {
@@ -113,14 +114,14 @@ header img {
     margin-right: 50px;
 }*/
 
-.gradient_text_1 {
+gradient_text_1 {
     background: linear-gradient(to right, #4facfe, #a150e9, #fa71cd, #ffa726, #ffeb3b);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
 }
 
-.header_text {
+header_text {
     margin-top: 15px;
     margin-bottom: 15px;
 }
