--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
     background-color: white;
     color: #333;
     /*line-height: 1.6;*/
-    padding: 0 20px; /*comment this to remove white side box borders*/
+    /*padding: 0 20px;*/ /*comment this to remove white side box borders*/
 }
 
 .display2 {
