--- a/styles.css
+++ b/styles.css
@@ -402,12 +402,14 @@ section {
 /* Footer Styles */
 footer {
     text-align: center;
-    padding: 0 15px;
+    padding: 10px;
     background-color: #333;
     color: white;
     line-height: 1;
     border-radius: 12px;
     margin-bottom: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 footer p {
