--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,9 @@ header {
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /*padding: 0 15px;*/
-    margin: 0 15px;
+    /*margin: 0 15px;*/
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 /*.header_items {
