--- a/styles.css
+++ b/styles.css
@@ -605,7 +605,7 @@
     font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
     /*padding: 0;*/
-    /*margin-top: 15px;*/
+    margin-top: 15px;
     margin-bottom: 10px;
     line-height: 0.2;
 }
@@ -692,7 +692,7 @@
   border-radius: 8px;
   cursor: pointer;
   font-family: 'Helvetica';
-  font-weight: bold;
+  /*font-weight: bold;*/
   background-color: #e9e9e9;
   display: flex;
   justify-content: space-between;
