--- a/styles.css
+++ b/styles.css
@@ -692,6 +692,10 @@
   /*background-color: rgb(220, 220, 220);*/    
 }
 
+.accordion-item.active {
+  margin-bottom: 15px;    
+}
+
 .accordion-header {
   padding: 12px 16px;
   border-radius: 8px;
@@ -753,4 +757,5 @@
   color: black; /* font color */
   font-size: 1em;
   /*border: 1px solid white;*/
+  /*margin-bottom: 15px;*/
 }
