--- a/styles.css
+++ b/styles.css
@@ -691,13 +691,13 @@
   /*border: 1px solid black;*/
   /*background-color: rgb(220, 220, 220);*/    
 }
-
+/*
 .accordion-item.clicked {
   margin-bottom: 15px;    
 }
-
+*/
 .accordion-header {
-  padding: 12px 16px;
+  padding: 10px 20px;
   border-radius: 8px;
   cursor: pointer;
   font-family: 'Helvetica';
@@ -757,5 +757,5 @@
   color: black; /* font color */
   font-size: 1em;
   /*border: 1px solid white;*/
-  /*margin-bottom: 15px;*/
+  margin-bottom: 15px;
 }
