--- a/styles.css
+++ b/styles.css
@@ -593,8 +593,8 @@
     padding: 10px;
     /*margin-top: 20px;
     margin-bottom: 10px;*/
-    /*border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;
     justify-content: center;
     height: 100vh;*/
@@ -756,6 +756,6 @@
   font-family: 'Helvetica';
   color: black; /* font color */
   font-size: 1em;
-  /*border: 1px solid white;*/
+  border: 1px solid black;
   margin-bottom: 15px;
 }
