--- a/styles.css
+++ b/styles.css
@@ -677,7 +677,7 @@
   border-radius: 8px;
   margin-bottom: 10px;
   background-color: #e9e9e9;
-  height: auto;
+  /*height: auto;*/
   overflow: visible;
   /*border: 1px solid transparent;*/ /* prevents layout shift */
 }
