--- a/styles.css
+++ b/styles.css
@@ -750,8 +750,8 @@
 
 .accordion-item.active .accordion-content {
   padding: 0 15px;
-  max-height: 1000px; /* adjust based on expected content size */
-  /*height: auto;*/
+  /*max-height: 1000px;*/ /* adjust based on expected content size */
+  height: auto;
   overflow: visible;
   font-family: 'Helvetica';
   color: black; /* font color */
