--- a/styles.css
+++ b/styles.css
@@ -749,7 +749,7 @@
 }
 
 .accordion-item.active .accordion-content {
-  padding: 0 15px;
+  padding: 15px 15px;
   /*max-height: 1000px;*/ /* adjust based on expected content size */
   height: auto;
   overflow: visible;
