--- a/styles.css
+++ b/styles.css
@@ -749,7 +749,7 @@
   font-family: 'Helvetica';
   color: black; /* font color */
   font-size: 1em;
-  margin-top: 0;
+  /*margin-top: 0;*/
 }
 
 .accordion-item.active .accordion-content {
