--- a/styles.css
+++ b/styles.css
@@ -753,12 +753,12 @@
 }
 
 .accordion-item.active .accordion-content {
-  padding: 5px 15px; /* t/b l/r top padding of p from up header lower edge, bottom padding of p from down header upper edge; important */
+  padding: 15px 15px; /* t/b l/r top padding of p from up header lower edge, bottom padding of p from down header upper edge; important */
   /*max-height: 1000px;*/ /* adjust based on expected content size */
   height: auto;
   overflow: visible;
   border: 1px solid black;
-  margin-bottom: 15px; /* content box gap from down header upper edge */
+  margin-bottom: 50px; /* content box gap from down header upper edge */
 }
 
 .accordion-item.active .accordion-content p {
@@ -766,5 +766,5 @@
   color: black; /* font color */
   font-size: 1em;
   margin-top: 0; /* added to top padding; not important */
-  margin-bottom: 50px;
+  /*margin-bottom: 50px;*/ /* doesn't work to add any gap */
 }
