--- a/styles.css
+++ b/styles.css
@@ -622,21 +622,20 @@
     margin-bottom: 15px;
 }
 
-.projects_intro_pic {
-    /*display: flex;*/
-    /*display: block;
-    margin: auto;
-    width: 50%;
-    height: auto;*/
-    /*justify-content: center;*/
-}
-
 .projects_intro_pic img {
-    max-height: 340px;
+    max-height: 338px;
     width: auto;
+    margin-top: 0;
     /*border-radius: 50%;*/
     /*margin-left: 300px;*/
     /*padding: 20px;*/
+}
+
+.projects_intro_pic p {
+    font-size: 1em;
+    font-family: 'Helvetica';
+    color: black;
+    margin-top: 15px;
 }
 
 .projects_page footer {
