--- a/styles.css
+++ b/styles.css
@@ -766,7 +766,7 @@
   color: black; /* font color */
   font-size: 1em;
   text-align: left;
-  line-height: 1.5px;
+  /*line-height: 1.5px;*/
   /*margin-top: 0;*/
 }
 
@@ -793,5 +793,5 @@
   margin-top: 0; /* added to top padding of content box; not important */
   /*margin-bottom: 50px;*/ /* doesn't work to add any gap */
   text-align: left;
-  line-height: 1.5px;
+  /*line-height: 1.5px;*/
 }
