--- a/styles.css
+++ b/styles.css
@@ -756,7 +756,7 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease, padding 0.3s ease;
-  padding: 0 15px;
+  padding: 0 20px;
   background-color: #ffffff;
   /*border: 1px solid transparent;*/
 }
@@ -766,7 +766,7 @@
   color: black; /* font color */
   font-size: 1em;
   text-align: left;
-  /*line-height: 1.5px;*/
+  line-height: 1.5;
   /*margin-top: 0;*/
 }
 
@@ -792,6 +792,6 @@
   font-size: 1em;
   margin-top: 0; /* added to top padding of content box; not important */
   /*margin-bottom: 50px;*/ /* doesn't work to add any gap */
-  text-align: left;
-  /*line-height: 1.5px;*/
+  /*text-align: left;
+  line-height: 1.5px;*/
 }
