--- a/styles.css
+++ b/styles.css
@@ -756,7 +756,7 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease, padding 0.3s ease;
-  padding: 0 20px;
+  padding: 0 30px;
   background-color: #ffffff;
   /*border: 1px solid transparent;*/
 }
@@ -777,13 +777,22 @@
   font-weight: bold;
 }
 
+.accordion-content ul {
+  font-family: 'Helvetica';
+  color: black; /* font color */
+  font-size: 1em;
+  text-align: left;
+  line-height: 1.5;
+  padding-left: 30px;
+}
+
 .accordion-item.active .accordion-content {
   padding: 15px 15px; /* t/b l/r top padding of p from up header lower edge, bottom padding of p from down header upper edge; important */
   /*max-height: 1000px;*/ /* adjust based on expected content size */
   height: auto;
   overflow: visible;
   /*border: 1px solid black;*/ /* uncomment to see padding and margin effects */
-  margin-bottom: 100px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
+  margin-bottom: 200px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
 }
 
 .accordion-item.active .accordion_content_description {
