--- a/styles.css
+++ b/styles.css
@@ -594,7 +594,7 @@
     /*margin-top: 20px;
     margin-bottom: 10px;*/
     border-radius: 12px;
-    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/ /* uncomment to see left and right box height differences wrt content size */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* uncomment to see left and right box height differences wrt content size */
     /*align-items: center;
     justify-content: center;
     height: 100vh;*/
@@ -793,7 +793,7 @@
 }
 
 .accordion-item.active .accordion-content {
-  padding: 8px 15px; /* t/b l/r top padding of p from up header lower edge, bottom padding of p from down header upper edge; important */
+  padding: 8px 20px; /* t/b l/r top padding of p from up header lower edge, bottom padding of p from down header upper edge; important */
   /*max-height: 1000px;*/ /* adjust based on expected content size */
   height: auto;
   overflow: visible;
@@ -809,4 +809,10 @@
   /*margin-bottom: 50px;*/ /* doesn't work to add any gap */
   /*text-align: left;
   line-height: 1.5px;*/
+}
+
+.accordion-item.active .accordion-content ul {
+  text-align: left
+  padding-left: 20px;
+  margin-top: 8px;
 }
