--- a/styles.css
+++ b/styles.css
@@ -813,6 +813,12 @@
 
 .accordion-item.active .accordion-content ul {
   text-align: left
+  padding-left: 40px;
+  margin-top: 0;
+}
+
+.accordion-item.active .accordion-content li {
+  /*text-align: left
   padding-left: 20px;
-  margin-top: 8px;
+  margin-top: 0;*/
 }
