--- a/styles.css
+++ b/styles.css
@@ -812,13 +812,13 @@
 }
 
 .accordion-item.active .accordion-content ul {
-  text-align: left
-  padding-left: 40px;
-  margin-top: 0;
+  text-align: left;
+  /*padding-left: 40px;
+  margin-top: 0;*/
 }
 
 .accordion-item.active .accordion-content li {
-  /*text-align: left
+  text-align: left;
   padding-left: 20px;
-  margin-top: 0;*/
+  margin-top: 0;
 }
