--- a/styles.css
+++ b/styles.css
@@ -814,8 +814,8 @@
 
 .accordion-item.active .accordion-content ul {
   text-align: left;
-  /*padding-left: 40px;
-  margin-top: 0;*/
+  /*padding-left: 40px;*/
+  margin-top: 0;
 }
 
 .accordion-item.active .accordion-content li {
