--- a/styles.css
+++ b/styles.css
@@ -799,7 +799,7 @@
   height: auto;
   overflow: visible;
   /*border: 1px solid black;*/ /* uncomment to see padding and margin effects */
-  margin-bottom: 200px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
+  margin-bottom: 192px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
 }
 
 .accordion-item.active .accordion_content_description {
@@ -814,12 +814,12 @@
 
 .accordion-item.active .accordion-content ul {
   text-align: left;
-  /*padding-left: 40px;*/
-  margin-top: 0;
+  padding-top: 0;
+  /*margin-top: 0;*/
 }
 
 .accordion-item.active .accordion-content li {
   text-align: left;
-  /*padding-left: 20px;*/
-  margin-top: 0;
+  /*padding-left: 20px;
+  margin-top: 0;*/
 }
