--- a/styles.css
+++ b/styles.css
@@ -814,12 +814,12 @@
 
 .accordion-item.active .accordion-content ul {
   text-align: left;
-  padding-top: 0;
+  /*padding-top: 0;*/
   /*margin-top: 0;*/
 }
 
 .accordion-item.active .accordion-content li {
   text-align: left;
-  /*padding-left: 20px;
-  margin-top: 0;*/
+  padding-top: 0;
+  /*margin-top: 0;*/
 }
