--- a/styles.css
+++ b/styles.css
@@ -794,7 +794,8 @@
 }
 
 .accordion-item.active .accordion-content {
-  padding: 8px 20px; /* t/b l/r top padding of p from up header lower edge, bottom padding of p from down header upper edge; important */
+  /*padding: 8px 20px;*/ /* t/b l/r top padding of p from up header lower edge, bottom padding of p from down header upper edge; important */
+  padding: 8px 20px 0; /* t l/r b */
   /*max-height: 1000px;*/ /* adjust based on expected content size */
   height: auto;
   overflow: visible;
@@ -820,6 +821,6 @@
 
 .accordion-item.active .accordion-content li {
   text-align: left;
-  padding-top: 0;
-  /*margin-top: 0;*/
+  /*padding-top: 0;
+  margin-top: 0;*/
 }
