--- a/styles.css
+++ b/styles.css
@@ -781,8 +781,8 @@
 
 .accordion-content ul {
   text-align: left;
-  /*padding-left: 20px;
-  margin-top: 8px;*/
+  /*padding-left: 20px;*/
+  margin-top: 0;
   list-style-position: inside; /* Makes bullets align inside the content box */
 }
 
@@ -790,7 +790,7 @@
   font-family: 'Helvetica';
   color: black; /* font color */
   font-size: 1em;
-  /*line-height: 1;*/
+  line-height: 1;
 }
 
 .accordion-item.active .accordion-content {
@@ -816,7 +816,7 @@
 .accordion-item.active .accordion-content ul {
   /*text-align: left;
   padding-top: 0;*/
-  /*margin-top: 0;*/
+  margin-top: 0;
 }
 
 .accordion-item.active .accordion-content li {
