--- a/styles.css
+++ b/styles.css
@@ -779,14 +779,14 @@
   font-weight: bold;
 }
 
-.accordion-content ul {
+.accordion_content_description ul {
   text-align: left;
   /*padding-left: 20px;*/
   margin-top: 0;
   list-style-position: inside; /* Makes bullets align inside the content box */
 }
 
-.accordion-content li {
+.accordion_content_description li {
   font-family: 'Helvetica';
   color: black; /* font color */
   font-size: 1em;
@@ -813,13 +813,13 @@
   line-height: 1.5px;*/
 }
 
-.accordion-item.active .accordion-content ul {
+.accordion-item.active .accordion_content_description ul {
   /*text-align: left;
   padding-top: 0;*/
   margin-top: 0;
 }
 
-.accordion-item.active .accordion-content li {
+.accordion-item.active .accordion_content_description li {
   /*text-align: left;
   padding-top: 0;
   margin-top: 0;*/
