--- a/styles.css
+++ b/styles.css
@@ -783,6 +783,7 @@
   text-align: left;
   padding-top: 0;
   margin-top: 0;
+  margin-bottom:0;
   list-style-position: inside; /* Makes bullets align inside the content box */
 }
 
